--- a/app/src/main/res/layout/fragment_player.xml
+++ b/app/src/main/res/layout/fragment_player.xml
@@ -1,55 +1,144 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/myview"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical">
+    android:id="@+id/scrollView"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent">
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
 
-        <TextView
-            android:layout_width="30dp"
-            android:layout_height="wrap_content"
-            android:text="У лукоморья дуб зелёный;
-Златая цепь на дубе том:
-И днём и ночью кот учёный
-Всё ходит по цепи кругом;
-Идёт направо — песнь заводит,
-Налево — сказку говорит.
-Там чудеса: там леший бродит,
-Русалка на ветвях сидит;
-Там на неведомых дорожках
-Следы невиданных зверей;
-Избушка там на курьих ножках
-Стоит без окон, без дверей;
-Там лес и дол видений полны;
-Там о заре прихлынут волны
-На брег песчаный и пустой,
-И тридцать витязей прекрасных
-Чредой из вод выходят ясных,
-И с ними дядька их морской;
-Там королевич мимоходом
-Пленяет грозного царя;
-Там в облаках перед народом
-Через леса, через моря
-Колдун несёт богатыря;
-В темнице там царевна тужит,
-А бурый волк ей верно служит;
-Там ступа с Бабою Ягой
-Идёт, бредёт сама собой,
-Там царь Кащей над златом чахнет;
-Там русский дух… там Русью пахнет!
-И там я был, и мёд я пил;
-У моря видел дуб зелёный;
-Под ним сидел, и кот учёный
-Свои мне сказки говорил."
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            <!-- header region -->
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            <TextView
+                android:id="@+id/tv_nickname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:text="player name"
+                android:textSize="20sp"
+                app:layout_constraintStart_toEndOf="@+id/iv_avatar"
+                app:layout_constraintTop_toTopOf="@+id/iv_avatar" />
+
+            <TextView
+                android:id="@+id/tv_under_nickname"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="9943399433479"
+                app:layout_constraintStart_toStartOf="@+id/tv_nickname"
+                app:layout_constraintTop_toBottomOf="@+id/tv_nickname" />
+
+            <ImageView
+                android:id="@+id/iv_avatar"
+                android:layout_width="64dp"
+                android:layout_height="64dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="16dp"
+                android:src="@drawable/avatar_64"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/iv_rating"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="16dp"
+                android:src="@drawable/ic_baseline_person_40"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/tv_rating"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:text="рейтинг"
+                app:layout_constraintEnd_toStartOf="@+id/iv_rating"
+                app:layout_constraintTop_toTopOf="@+id/iv_rating" />
+
+            <TextView
+                android:id="@+id/tv_last_match_const"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:text="Last match"
+                app:layout_constraintEnd_toStartOf="@+id/tv_wl_const"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/iv_avatar" />
+
+            <TextView
+                android:id="@+id/tv_last_match"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="1 апреля 2023"
+                app:layout_constraintEnd_toEndOf="@+id/tv_last_match_const"
+                app:layout_constraintStart_toStartOf="@+id/tv_last_match_const"
+                app:layout_constraintTop_toBottomOf="@+id/tv_last_match_const" />
+
+            <TextView
+                android:id="@+id/tv_wl_const"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Win/Loss"
+                app:layout_constraintEnd_toStartOf="@+id/tv_winrate_const"
+                app:layout_constraintStart_toEndOf="@+id/tv_last_match_const"
+                app:layout_constraintTop_toTopOf="@+id/tv_last_match_const" />
+
+            <TextView
+                android:id="@+id/tv_wl"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="600-600"
+                app:layout_constraintEnd_toEndOf="@+id/tv_wl_const"
+                app:layout_constraintStart_toStartOf="@+id/tv_wl_const"
+                app:layout_constraintTop_toBottomOf="@+id/tv_wl_const" />
+
+            <TextView
+                android:id="@+id/tv_winrate_const"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Win rate"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/tv_wl_const"
+                app:layout_constraintTop_toTopOf="@+id/tv_wl_const" />
+
+            <TextView
+                android:id="@+id/tv_winrate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="50%"
+                app:layout_constraintEnd_toEndOf="@+id/tv_winrate_const"
+                app:layout_constraintStart_toStartOf="@+id/tv_winrate_const"
+                app:layout_constraintTop_toBottomOf="@+id/tv_winrate_const" />
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <!-- header endregion -->
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <!-- most played heroes region -->
+
+            <TextView
+                android:id="@+id/tv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="4sdfdsffsddsdfs" />
+
+            <!-- most played heroes endregion -->
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.appcompat.widget.LinearLayoutCompat>
 </ScrollView>
