--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,10 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
+    <color name="red">#9F0303</color>
+    <color name="green">#026C0D</color>
+
+    <color name="background_test">#700B3B3C</color>
 
     <!--    Light Mode:-->
     <!-- Primary color: #FF6633 (bright orange) -->
