--- a/app/src/main/res/layout/player_header.xml
+++ b/app/src/main/res/layout/player_header.xml
@@ -15,7 +15,7 @@
         app:layout_constraintTop_toTopOf="@+id/iv_avatar" />
 
     <TextView
-        android:id="@+id/tv_under_nickname"
+        android:id="@+id/tv_account_id"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="9943399433479"
@@ -65,7 +65,7 @@
         android:id="@+id/tv_last_match"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="01.04.2023"
+        android:text="@string/base_date"
         app:layout_constraintEnd_toEndOf="@+id/tv_last_match_const"
         app:layout_constraintStart_toStartOf="@+id/tv_last_match_const"
         app:layout_constraintTop_toBottomOf="@+id/tv_last_match_const" />
