--- a/app/src/main/res/layout/team_outcome_item.xml
+++ b/app/src/main/res/layout/team_outcome_item.xml
@@ -6,7 +6,7 @@
     android:background="@color/background_test">
 
     <TextView
-        android:id="@+id/tv_outcome"
+        android:id="@+id/tv_outcome_const"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:maxWidth="140dp"
