--- a/app/src/main/res/layout/player_header.xml
+++ b/app/src/main/res/layout/player_header.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/tv_nickname"
@@ -52,23 +52,23 @@
         app:layout_constraintTop_toTopOf="@+id/iv_rating" />
 
     <TextView
-        android:id="@+id/tv_last_match_const"
+        android:id="@+id/tv_last_online_const"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="Last match"
+        android:text="Last online"
         app:layout_constraintEnd_toStartOf="@+id/tv_wl_const"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/iv_avatar" />
 
     <TextView
-        android:id="@+id/tv_last_match"
+        android:id="@+id/tv_last_online"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/base_date"
-        app:layout_constraintEnd_toEndOf="@+id/tv_last_match_const"
-        app:layout_constraintStart_toStartOf="@+id/tv_last_match_const"
-        app:layout_constraintTop_toBottomOf="@+id/tv_last_match_const" />
+        app:layout_constraintEnd_toEndOf="@+id/tv_last_online_const"
+        app:layout_constraintStart_toStartOf="@+id/tv_last_online_const"
+        app:layout_constraintTop_toBottomOf="@+id/tv_last_online_const" />
 
     <TextView
         android:id="@+id/tv_wl_const"
@@ -76,8 +76,8 @@
         android:layout_height="wrap_content"
         android:text="Win/Loss"
         app:layout_constraintEnd_toStartOf="@+id/tv_winrate_const"
-        app:layout_constraintStart_toEndOf="@+id/tv_last_match_const"
-        app:layout_constraintTop_toTopOf="@+id/tv_last_match_const" />
+        app:layout_constraintStart_toEndOf="@+id/tv_last_online_const"
+        app:layout_constraintTop_toTopOf="@+id/tv_last_online_const" />
 
     <TextView
         android:id="@+id/tv_wl"
