--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,15 +3,15 @@
 
     <item
         android:id="@+id/action_settings"
-        android:icon="@drawable/ic_baseline_person_40"
+        android:icon="@drawable/antimage_icon"
         android:title="Настройки" />
     <item
         android:id="@+id/action_search"
-        android:icon="@drawable/ic_baseline_person_40"
+        android:icon="@drawable/search_40"
         android:title="Поиск" />
     <item
         android:id="@+id/action_favorite"
-        android:icon="@drawable/ic_baseline_person_40"
+        android:icon="@drawable/favorite_fill_40"
         android:title="Избранное" />
 
 </menu>
