--- a/app/src/main/res/layout/hero_item.xml
+++ b/app/src/main/res/layout/hero_item.xml
@@ -49,7 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="-2dp"
-        android:text="666"
+        android:text="@string/base_number"
         app:layout_constraintBottom_toTopOf="@+id/tv_matches_const"
         app:layout_constraintStart_toStartOf="@+id/tv_matches_const" />
 
