--- a/app/src/main/res/layout/match_header.xml
+++ b/app/src/main/res/layout/match_header.xml
@@ -5,23 +5,36 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <TextView
-        android:id="@+id/tv_match_id"
+        android:id="@+id/tv_match_const"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
         android:layout_marginTop="6dp"
-        android:text="Match 9999999999"
-        android:textSize="20dp"
+        android:text="@string/match"
+        android:textSize="20sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/tv_match_id"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/base_number_big"
+        android:layout_marginStart="4dp"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="@+id/tv_match_const"
+        app:layout_constraintStart_toEndOf="@+id/tv_match_const"
+        app:layout_constraintTop_toTopOf="@+id/tv_match_const" />
+
 
     <TextView
         android:id="@+id/tv_winner"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:text="DIRE VICTORY"
-        android:textSize="20dp"
+        android:text="@string/base_team_victory"
+        android:textAllCaps="true"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_match_id" />
@@ -30,7 +43,7 @@
         android:id="@+id/tv_match_time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="66:99"
+        android:text="@string/base_score"
         app:layout_constraintBottom_toBottomOf="@+id/tv_radiant_kills"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -42,8 +55,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="12dp"
-        android:text="66"
-        android:textSize="20dp"
+        android:text="@string/base_number"
+        android:textSize="20sp"
         app:layout_constraintEnd_toStartOf="@+id/tv_match_time"
         app:layout_constraintTop_toBottomOf="@+id/tv_winner" />
 
@@ -52,8 +65,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
-        android:text="99"
-        android:textSize="20dp"
+        android:text="@string/base_number"
+        android:textSize="20sp"
         app:layout_constraintStart_toEndOf="@+id/tv_match_time"
         app:layout_constraintTop_toTopOf="@+id/tv_radiant_kills" />
 
