--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="4dp"
         android:layout_marginEnd="4dp"
         android:autofillHints="username"
-        android:hint="Player nickname or Match ID"
+        android:hint="@string/main_search_hint"
         android:imeOptions="actionSearch"
         android:inputType="textPersonName"
         android:singleLine="true"
