--- a/app/src/main/res/layout/text_center_item.xml
+++ b/app/src/main/res/layout/text_center_item.xml
@@ -9,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="text"
+        android:text="@string/test"
         android:textAllCaps="true"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
