--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,8 +17,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:menu="@menu/top_app_bar"
-        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-        app:title="Dota Stats" />
+        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
 
     <FrameLayout
