--- a/app/src/main/res/layout/fragment_player_overview.xml
+++ b/app/src/main/res/layout/fragment_player_overview.xml
@@ -28,7 +28,7 @@
         android:id="@+id/tv_error"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:visibility="invisible"
+        android:visibility="gone"
         android:text="Error message"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
