--- a/app/src/main/res/menu/top_app_bar_heart.xml
+++ b/app/src/main/res/menu/top_app_bar_heart.xml
@@ -4,14 +4,14 @@
 
     <item
         android:id="@+id/action_more"
-        android:contentDescription="More"
-        android:title="Settings"
+        android:contentDescription="@string/more"
+        android:title="@string/settings"
         app:showAsAction="never" />
 
     <item
         android:id="@+id/action_heart"
         android:icon="@drawable/favorite_40"
-        android:title="Add To Favorite"
+        android:title="@string/add_to_favorites"
         app:showAsAction="ifRoom"
         android:orderInCategory="1" />
 
